--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ body{font-family: 'Noto Sans KR', sans-serif;}
   }
 }
 
-@media all and (max-width:575px){
+@media all and (min-width:341px) and (max-width:575px){
   #header{
     height:120px;
   }
@@ -548,5 +548,148 @@ body{font-family: 'Noto Sans KR', sans-serif;}
   }
   #footer .foot_cont{
     margin-left:50px;
+  }
+}
+
+@media all and (max-width:340px){
+  #header{
+    height:120px;
+  }
+  #header .h_cont{
+    height:120px;
+  }
+  #header .h_cont .logo>img{
+    width: 140px;
+  }
+  #header .h_cont .nav{
+    position: relative;
+    width: 30px; height: 3px;
+    background-color: rgb(128, 128, 128);
+    transition: all 0.3s;
+    display: block;
+  }
+  #header .h_cont .nav:before{
+    content: "";
+    display: block;
+    width: 30px; height: 3px;
+    background-color: rgb(128, 128, 128);
+    position: absolute;
+    top:-10px; left:0;
+    transition: all 0.3s;
+  }
+  #header .h_cont .nav:after{
+    content: "";
+    display: block;
+    width: 30px; height: 3px;
+    background-color: rgb(128, 128, 128);
+    position: absolute;
+    top:10px; left:0;
+    transition: all 0.3s;
+  }
+  #header .h_cont .nav:hover,
+  #header .h_cont .nav:hover:before,
+  #header .h_cont .nav:hover:after{
+    background-color: #ef7f1b;
+  }
+  #header .h_cont .nav>li{
+    display: none;
+  }
+
+  /* 메인 배너 */
+  .swiper-container .swiper-pagination .swiper-pagination-bullet{
+    width: 10px; height: 10px;
+  }
+  .swiper-container .swiper-pagination .swiper-pagination-bullet-active{
+    width: 10px; height: 10px;
+  }
+
+  /* 소개 */
+  #section .cont1{
+    margin-top:50px;
+  }
+  #section .cont1 .c1_imgbox>ul>li>img{
+    width: 95%;
+  }
+  #section .cont1 .c1_desc{
+    width:73%; height:220px;
+    display: block;
+  }
+  #section .cont1 .c1_desc>h3{
+    text-align: left;
+    font-size:20px;
+  }
+  #section .cont1 .c1_desc>p{
+    font-size: 12px;
+    line-height: 20px;
+    margin-top:20px;
+  }
+
+  /* 즐기는 방법 */
+  #section .drink_desc{
+    height: 200px;
+    margin-top:50px;
+  }
+  #section .drink_desc>h2{
+    font-size: 20px;
+    padding-top:20px;
+  }
+  #section .drink_desc .icon>li>img{
+    width: 98%;
+  }
+  #section .drink_desc .icon>li>p{
+    font-size: 10px;
+  }
+
+  /* 다른 제품들 */
+  #section .other{
+    margin-top:50px;
+  }
+  #section .other .o_txt>h1{
+    font-size: 20px;
+  }
+  #section .other .o_txt>p{
+    font-size: 12px;
+  }
+  #section .other .o_img>ul{
+    display: block;
+    text-align: center;
+  }
+  #section .other .o_img .img1>li,
+  #section .other .o_img .img2>li{
+  margin-top:30px;
+}
+  #section .other .o_img>ul>li:after{
+    width: 90%; height: 100%;
+    border-radius: 16px;
+    left:16px;
+  }
+  #section .other .o_img .img1>li:nth-child(1):after,
+  #section .other .o_img .img2>li:nth-child(2):after{
+    border-radius: 8px;
+  }
+  #section .other .o_img>ul>li>img{
+    width:90%;
+  }
+  #section .other .o_img>ul>li>p:after{
+    display: none;
+  }
+  #section .other .o_img>ul>li>p{
+    font-size: 19px;
+    bottom:15px; left:35px;
+  }
+
+  /* 푸터 */
+  #footer{
+    height:260px;
+    margin-top:50px;
+  }
+  #footer .foot_cont{
+    margin-left:15px;
+  }
+  #footer .foot_cont>p{
+    font-size: 12px;
+  }
+  #footer .foot_cont .foot_info{
+    line-height: 20px;
   }
 }
