--- a/css/style.css
+++ b/css/style.css
@@ -652,16 +652,17 @@ body{font-family: 'Noto Sans KR', sans-serif;}
   }
   #section .other .o_img>ul{
     display: block;
-    text-align: center;
+    /* text-align: center; */
   }
   #section .other .o_img .img1>li,
   #section .other .o_img .img2>li{
   margin-top:30px;
+  text-align: center;
 }
   #section .other .o_img>ul>li:after{
     width: 90%; height: 100%;
     border-radius: 16px;
-    left:16px;
+    left:5px;
   }
   #section .other .o_img .img1>li:nth-child(1):after,
   #section .other .o_img .img2>li:nth-child(2):after{
@@ -675,7 +676,7 @@ body{font-family: 'Noto Sans KR', sans-serif;}
   }
   #section .other .o_img>ul>li>p{
     font-size: 19px;
-    bottom:15px; left:35px;
+    /* bottom:15px; left:35px; */
   }
 
   /* 푸터 */
