--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ img{border:0; vertical-align:top;}
 /* 노토산스 (기본) */
 @import url('//fonts.googleapis.com/earlyaccess/notosanskr.css');
 
-body{font-family: 'Noto Sans KR', sans-serif;}
+body{font-family: 'Noto Sans KR', sans-serif; overflow-x:hidden;}
 
 #header{
   width:100%; height: 150px;
